// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[keychain/KeychainManager] :: should be able to add a read only wallet using an address 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJ02owlYTXoBGB8NQnUa+e/ScvfBE1EPh7u9VoR0RAfC7OUWIS5/CDKlQK8tGY8b0Rg1x3zKxM6qJ9FbE+iEZOVRXUoiW3r1TfiVE8S7BurH9Zfwn44YJxuV5ktwP5kuklD4mEXM+JpA==","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to add an account 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbEHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJv0oQWNnyIm1kT7PsIsLQetIBEw==","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to autodiscover accounts when importing a seed phrase 1`] = `
{
  "local": {
    "vault": "{"data":"6SsnVIq3qNchKHXhZ3ItGrrDogMwH57rqh0/K+YXpahM6es+PZV09bC5DPiMoZFMkGeP335Y9XIVb5A0xs7jDD0ZrWPVwU40gU8aTKHNpJpeOoev5MrxtE9+3fUAL94sqQfU8yrYMlYgQcnS7LeRT/MHyGe7po8bn/jMU47MW9BAq3YXFBlJNsKg1T79Ea577Dx0mD8FHKSrHu/uoSvenfQvsqPb63ES0G2EFUFnusIYSJbCzl3I1iD81B6zeYHkXLXuUiBHIYXL76f2QsCVKfen2j4gQ7QyvIJjFkZTXlN6q4vkJnFSZ6RteNQVyJ98kJfMScHuByj/PYApmDsuh2lhISWXXeFW3QcSfTkN8cyYm0URTuuiAvMeNhRgdPJuLuys75HUPuH5nuMItR+eB1j71LkT9+/cM4b27LbkmNlc0vEYTnVFlB5dm0Gd8lyOa0lEh+/NURau08/ANfDlJPO4WGSk7r4L5HSCZcdbpvavTpM/Wu4puE0BzJjrgA==","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"21XrEeK48Uub8hSlM6MaRyOOFi4S4YkqISXWW5yTOAg","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to create an HD wallet 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJv0oQxWgbq/9wKtLoRHKXi1L4jA==","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to export a private key for an account 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbEHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJv0oQWNnyIm1kT7PsIsLQetIBEw==","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to export the seed phrase for an HD wallet 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJ02ow5On0hzhG6E0gaQmN4p0VRB4=","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to get the signer of a specific address 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU50RHUEUpNgHweGE4CnXZzUE43HqYils+pQAJkO8lGgnaMeqHDceJc1Kklq64oL0wM2pTEAqvJRSVTkUEhBWVz/c16b800nRKGN2exE9yrcYI4HcAbEZ2C+CbtXRwKX5ZhemYURKXEMtH23t9mzu8wY2UUCdgmh8m1ONK+rpCbebtcUzVDOiUX+QOTZw2vn4iIb46JnobRAoC+zMYW3RWUKbQNnK3jlI53JvX+y64/+xF6x8xrsuJjx/OfGQV8lOc","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to import a wallet using a private key 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJ02owlYTXsQeM9NAgR8bBpjVtaREuFPdcv4gTRGNJdSCQWzdB66eDKCN8iqWZpc5thy0nlvYavahbGaV2y1cPHRPB+T/R+wfd8glgAZk9tysJKFmmp90AhoBsxweEaeSrOBuEEKLIBEU0CDgNfIH51YPz1S5gpGOh7uEHq/KlwTG5","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to import a wallet using a seed phrase 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU50RHUEUpNgHweGE4CnXZzUE43HqYils+pQAJkO8lGgnaMeqHDceJc1Kklq64oL0wM2pTEAqvJRSVTkUEhBWVz/c16b800nRKGN2exE9yrcYI4HcAbEZ2C+CbtXRwKX5ZhemYURKXEMtH23t9mzu8wY2UUCdgmh8m1ONK+rpCbebtcUzVDOiUX+QOTZw2vn4iIb46JnobRAoC+zMYW3RWUKbQNnK3jlI53JvX+y64/+xF6x8xrsuJjx/OfGQV8lOc","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to lock the vault 1`] = `
{
  "local": {
    "vault": "{"data":"6SsnVIq3qNchKHXhZ3ItGrrDogMwH57rqh0/K+YXpahM6es+PZV09bC5DPiMoZFMkGeP335Y9XIVb5A0xs7jDD0ZrWPVwU40gU8aTKHNpJpeOoev5MrxtE9+3fUAL94sqQfU8yrYMlYgQcnS7LeRT/MHyGe7po8bn/jMU47MW9BAq3YXFBlJNsKg1T79Ea577Dx0mD8FHKSrHu/uoSvenfQvsqPb63ES0G2EFUFnusIYSJbCzl3I1iD81G8BkLtj0XO9x0d69OA87E6h","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": null,
    "salt": null,
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove an account from a KeyPair keychain... 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJ02ow5On0hzhG6E0gaQmN4p0VRB4=","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove an account from a ReadOnly keychain... 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJ02ow5On0hzhG6E0gaQmN4p0VRB4=","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove an account from an HD keychain... 1`] = `
{
  "local": {
    "vault": "{"data":"eKMsE7NmnQz+j7xU51ZUSVNgOE7zc2k6C3LTjFkgm2qanA99sBAdjLtxCxXXMe2MF9XPJ1K5h+O15bs0fHAWBBvhIxTGTAQewRKUge019ut5x3pcTJmdwk5r649YoXwMblY6U7G/uHZ9MHVJ1JbHHFKTEf8ElSJzg3G1vtjUHypsiFUm0PBC5a5eaL2kJgbHFOb+T9YbUd1k/V8oSPdhJHEZQhFOo2I9XXtcUa3AZwyJ02ow5On0hzhG6E0gaQmN4p0VRB4=","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"xo8WCs0MrOTJfjH58IxbznfOJHYuplKFMP6t8NOwMsc","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to remove empty keychains 1`] = `
{
  "local": {
    "vault": "",
  },
  "session": {
    "encryptionKey": null,
    "salt": null,
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to unlock the vault 1`] = `
{
  "local": {
    "vault": "{"data":"6SsnVIq3qNchKHXhZ3ItGrrDogMwH57rqh0/K+YXpahM6es+PZV09bC5DPiMoZFMkGeP335Y9XIVb5A0xs7jDD0ZrWPVwU40gU8aTKHNpJpeOoev5MrxtE9+3fUAL94sqQfU8yrYMlYgQcnS7LeRT/MHyGe7po8bn/jMU47MW9BAq3YXFBlJNsKg1T79Ea577Dx0mD8FHKSrHu/uoSvenfQvsqPb63ES0G2EFUFnusIYSJbCzl3I1iD81G8BkLtj0XO9x0d69OA87E6h","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"21XrEeK48Uub8hSlM6MaRyOOFi4S4YkqISXWW5yTOAg","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;

exports[`[keychain/KeychainManager] :: should be able to update the password of the vault 1`] = `
{
  "local": {
    "vault": "{"data":"6SsnVIq3qNchKHXhZ3ItGrrDogMwH57rqh0/K+YXpahM6es+PZV09bC5DPiMoZFMkGeP335Y9XIVb5A0xs7jDD0ZrWPVwU40gU8aTKHNpJpeOoev5MrxtE9+3fUAL94sqQfU8yrYMlYgQcnS7LeRT/MHyGe7po8bn/jMU47MW9BAq3YXFBlJNsKg1T79Ea577Dx0mD8FHKSrHu/uoSvenfQvsqPb63ES0G2EFUFnusIYSJbCzl3I1iD81G8BkLtj0XO9x0d69OA87E6h","iv":"AAECAwQFBgcICQoLDA0ODw==","keyMetadata":{"algorithm":"PBKDF2","params":{"iterations":600000}},"salt":"AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8="}",
  },
  "session": {
    "encryptionKey": "{"key":{"key_ops":["encrypt","decrypt"],"ext":true,"kty":"oct","k":"21XrEeK48Uub8hSlM6MaRyOOFi4S4YkqISXWW5yTOAg","alg":"A256GCM"},"derivationOptions":{"algorithm":"PBKDF2","params":{"iterations":600000}}}",
    "salt": "AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=",
  },
}
`;
